tests/ui/simd/simd-lane-limit-err.stderr
error: SIMD vector `V<i32, 8>` has 8 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:31:9
   |
LL |     let _a: V<i32, LANES> = V([0; LANES]);
   |         ^^

error: SIMD vector `V<i32, 8>` has 8 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:16:1
   |
LL | fn fn_args<const N: usize>(v: Option<Container<i32, N>>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn fn_args::<8>`
  --> $DIR/simd-lane-limit-err.rs:33:14
   |
LL |     let _b = fn_args::<LANES>(None);
   |              ^^^^^^^^^^^^^^^^^^^^^^

error: SIMD vector `V<i32, 8>` has 8 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:22:1
   |
LL | fn fn_ret<const N: usize>() -> Container<i32, N> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn fn_ret::<8>`
  --> $DIR/simd-lane-limit-err.rs:35:14
   |
LL |     let _c = fn_ret::<LANES>();
   |              ^^^^^^^^^^^^^^^^^

error: SIMD vector `V<i32, 6>` has 6 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:41:9
   |
LL |     let _a: V<i32, LANES> = V([0; LANES]);
   |         ^^

error: SIMD vector `V<i32, 6>` has 6 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:16:1
   |
LL | fn fn_args<const N: usize>(v: Option<Container<i32, N>>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn fn_args::<6>`
  --> $DIR/simd-lane-limit-err.rs:43:14
   |
LL |     let _b = fn_args::<LANES>(None);
   |              ^^^^^^^^^^^^^^^^^^^^^^

error: SIMD vector `V<i32, 6>` has 6 elements, exceeding the limit 4
  --> $DIR/simd-lane-limit-err.rs:22:1
   |
LL | fn fn_ret<const N: usize>() -> Container<i32, N> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn fn_ret::<6>`
  --> $DIR/simd-lane-limit-err.rs:45:14
   |
LL |     let _c = fn_ret::<LANES>();
   |              ^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

